<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My calculator</string>
    <string name="equal">=</string>
    <string name="delete">DELETE</string>
    <string name="no_results">No results</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <!--Numbers-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <!--Math operations-->
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="power">^</string>
    <string name="percent">%</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="point">.</string>
</resources>
