<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="5pt"
              android:layout_marginRight="5pt"
              android:id="@+id/basic_keyboard">
    <LinearLayout style="@style/Keyboard">
        <Button style="@style/DigitKeyboard"
                android:text="@string/seven"
                android:id="@+id/btn_seven">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/eight"
                android:id="@+id/btn_eight">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/nine"
                android:id="@+id/btn_nine">
        </Button>
        <Button style="@style/OperationsKeyboard"
                android:text="@string/multiplication"
                android:id="@+id/btn_multiplication">
        </Button>
    </LinearLayout>
    <LinearLayout style="@style/Keyboard">
        <Button style="@style/DigitKeyboard"
                android:text="@string/four"
                android:id="@+id/btn_four">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/five"
                android:id="@+id/btn_five">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/six"
                android:id="@+id/btn_six">
        </Button>
        <Button style="@style/OperationsKeyboard"
                android:text="@string/division"
                android:id="@+id/btn_division">
        </Button>
    </LinearLayout>
    <LinearLayout style="@style/Keyboard">
        <Button style="@style/DigitKeyboard"
                android:text="@string/one"
                android:id="@+id/btn_one">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/two"
                android:id="@+id/btn_two">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/three"
                android:id="@+id/btn_three">
        </Button>
        <Button style="@style/OperationsKeyboard"
                android:text="@string/addition"
                android:id="@+id/btn_addition">
        </Button>
    </LinearLayout>
    <LinearLayout style="@style/Keyboard">
        <Button style="@style/DigitKeyboard"
                android:text="@string/point"
                android:id="@+id/btn_point">
        </Button>
        <Button style="@style/DigitKeyboard"
                android:text="@string/zero"
                android:id="@+id/btn_zero">
        </Button>
        <Button style="@style/OperationsKeyboard"
                android:text="@string/equal"
                android:id="@+id/btn_equal">
        </Button>
        <Button style="@style/OperationsKeyboard"
                android:text="@string/subtraction"
                android:id="@+id/btn_subtraction">
        </Button>
    </LinearLayout>
</LinearLayout>