<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputLinearLayout"
            android:layout_marginLeft="15pt"
            android:layout_marginRight="15pt"
            android:layout_marginTop="7pt">
        <EditText
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/input_string"
                android:layout_width="match_parent"
                android:gravity="right"
                android:inputType="text"
                android:digits="0123456789."
                android:singleLine="true">
        </EditText>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultLinearLayout"
            android:layout_marginLeft="15pt"
            android:layout_marginRight="15pt">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:textSize="12pt"
                android:layout_marginTop="3pt"
                android:id="@+id/show_result"
                android:hint="@string/no_results"
                android:gravity="center_horizontal">
        </TextView>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15pt"
            android:layout_marginRight="15pt"
            android:layout_marginTop="5pt">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/clear"
                android:textSize="8pt"
                android:id="@+id/btn_clear">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/equal"
                android:textSize="8pt"
                android:id="@+id/btn_equal">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/left_parenthesis"
                android:textSize="8pt"
                android:id="@+id/btn_open_bracket">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/right_parenthesis"
                android:textSize="8pt"
                android:id="@+id/btn_close_bracket">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15pt"
            android:layout_marginRight="15pt">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/sin"
                android:textSize="8pt"
                android:id="@+id/btn_sin">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/cos"
                android:textSize="8pt"
                android:id="@+id/btn_cos">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/power"
                android:textSize="8pt"
                android:id="@+id/btn_power">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/percent"
                android:textSize="8pt"
                android:id="@+id/btn_percent">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oneLinearLayout"
            android:layout_marginTop="3pt"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="8pt"
                android:id="@+id/btn_seven">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="8pt"
                android:id="@+id/btn_eight">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="8pt"
                android:id="@+id/btn_nine">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/multiplication"
                android:textSize="8pt"
                android:id="@+id/btn_multiplication">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twoLinearLayout"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="8pt"
                android:id="@+id/btn_four">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="8pt"
                android:id="@+id/btn_five">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="8pt"
                android:id="@+id/btn_six">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="8pt"
                android:id="@+id/btn_division">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/threeLinearLayout"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="8pt"
                android:id="@+id/btn_one">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="8pt"
                android:id="@+id/btn_two">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="8pt"
                android:id="@+id/btn_three">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/addition"
                android:textSize="8pt"
                android:id="@+id/btn_addition">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonsLinearLayout"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="."
                android:textSize="8pt"
                android:id="@+id/btn_point">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="8pt"
                android:id="@+id/btn_zero">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="delete"
                android:textSize="8pt"
                android:id="@+id/btn_backspace"
                android:enabled="false">
        </Button>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/subtraction"
                android:textSize="8pt"
                android:id="@+id/btn_subtraction">
        </Button>
    </LinearLayout>
</LinearLayout>


