<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/additional_keyboard">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <Button
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/left_parenthesis"
                android:textSize="8pt"
                android:id="@+id/btn_open_bracket">
        </Button>
        <Button
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/right_parenthesis"
                android:textSize="8pt"
                android:id="@+id/btn_close_bracket">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <Button
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/sin"
                android:textSize="8pt"
                android:id="@+id/btn_sin">
        </Button>
        <Button
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/cos"
                android:textSize="8pt"
                android:id="@+id/btn_cos">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <Button
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/power"
                android:textSize="8pt"
                android:id="@+id/btn_power">
        </Button>
        <Button
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/percent"
                android:textSize="8pt"
                android:id="@+id/btn_percent">
        </Button>
    </LinearLayout>

</LinearLayout>